--- a/gtk-3.0/widgets/_header-bars.scss
+++ b/gtk-3.0/widgets/_header-bars.scss
@@ -105,6 +105,10 @@ headerbar {
 
       }
     }
+
+    &.titlebutton {
+      border: none;
+    }
   }
   .linked > button,
   .linked > button:hover,
